# trackzero

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: default.yaml  medium.yaml  quick.yaml
docs/: Challenge.txt  ablation_benchmark.md  capacity_scaling_analysis.md  checklist.md  coverage_analysis.md  coverage_performance.md  density_coverage_analysis.md  experiment_status.md  hp_sweep_progress.md  math.md  ood_analysis.md  oracle_gap_analysis.md  research_narrative.md  roadmap_status.md  scaling_laws.md  stage0.md  stage0_results.md  stage1.md  stage1_results.md  stage1_synthesis.md  stage1a.md  stage1b.md  stage1c.md  stage1d.md  stage1e_draft.md  stage2.md  stage3.md  stage4.md  stage_1b.md  stage_1c.md  stage_1c_analysis.md  stage_1c_commands.md  stage_1c_details.md  stage_1d.md  standard_benchmark_results.md  status.md  synthesis.md  three_axes_analysis.md  usage.md  why_hard_families_hard.md  (+1 more)
scripts/: ablation_study.py  aggregate_results.py  analyze_coverage.py  analyze_scaling.py  auto_benchmark_on_completion.py  auto_benchmark_scaling.py  benchmark_scaling.py  compile_results.py  comprehensive_benchmark.py  eval_ood.py  generate_dataset.py  hp_sweep.py  launch_sweeps.sh  models_structured.py  monitor_and_benchmark.sh  plot_learning_curve.py  probe_coverage_quality.py  quick_benchmark.py  run_3d_body.py  run_arch_ablation.py  run_arch_comparison.py  run_biped.py  run_capacity_scaling.py  run_capacity_scaling.sh  run_cem_mpc.py  run_chain_arch.py  run_chain_contact.py  run_chain_experiment.py  run_contact_experiment.py  run_contact_features.py  (+79 more)
(+38 files in other folders)
